# maleo

./: .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  dev_require.sh  libtool  maleo.spec
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
examples/hello-world/: config.xml  index.html
po/: Makefile  Makefile.in  POTFILES.in  maleo.pot
src/: Makefile  Makefile.am  Makefile.in  config.c  main.c  maleo  webview.c  window.c
src/.deps/: maleo-config.Po  maleo-main.Po  maleo-webview.Po  maleo-window.Po
